# src/main/documentation/openapi.json
@@ -66,6 +66,66 @@
           }
         }
       }
+    },
+    "/mercado-pago/hooks/payments/{id}": {
+      "post": {
+        "tags": [
+          "Payment"
+        ],
+        "summary": "Webhook do Mercado Pago",
+        "operationId": "mercadoPagoWebhook",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Identificador único do pagamento",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "ObjectId"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "status"
+                ],
+                "properties": {
+                  "status": {
+                    "type": "string",
+                    "enum": [
+                      "approved",
+                      "pending",
+                      "in_process",
+                      "rejected",
+                      "cancelled",
+                      "refunded",
+                      "charged_back"
+                    ],
+                    "example": "approved",
+                    "description": "Status do pagamento"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "Webhook recebido com sucesso"
+          },
+          "400": {
+            "description": "Requisição inválida"
+          },
+          "500": {
+            "description": "Erro interno"
+          }
+        }
+      }
     }
   },
   "components": {
